--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import pandas as pd # data processing
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
