--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -505,16 +505,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4c7f6a05",
+   "execution_count": 90,
+   "id": "aeba81b9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion matrix Accuracy is: 0.8173076923076923\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Confusion matrix Accuracy is: {}'.format(metrics.accuracy_score(y_test, y_pred)))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "add66a65",
+   "id": "f61e14c9",
    "metadata": {},
    "outputs": [],
    "source": []
