--- a/RandomForest.ipynb
+++ b/RandomForest.ipynb
@@ -523,8 +523,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "id": "f61e14c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#with removing less correlation data\n",
+    "X = dataset.drop(['odor','gill-color','bruises','class','cap-color','ring-type','bruises'],axis=1)\n",
+    "y = dataset['odor']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "     X, y, test_size=0.4,random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "51bb6848",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8388461538461538"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_1 = RandomForestClassifier(max_depth=10, random_state=10)\n",
+    "model_1.fit(X_train, y_train)\n",
+    "y_pred = model_1.predict(X_test)\n",
+    "accuracy_score(y_test,y_pred)\n",
+    "\n",
+    "#we can see that we  get better score."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3db27809",
    "metadata": {},
    "outputs": [],
    "source": []
